--- a/code/introduce_stride.ipynb
+++ b/code/introduce_stride.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,6 @@
     "            self.check_pattern(label)\n",
     "            \n",
     "            label, image_paths = self.set_threshold_values(label,image_paths,csv_path)    \n",
-    "            # label, image_paths = self.duplicate_n_balance_data(label, image_paths)\n",
     "            \n",
     "            '''            \n",
     "            example values of label and image_paths pair             \n",
@@ -232,12 +231,12 @@
     "            zeroes = 39, ones = 42\n",
     "            [38,39,40] == 0 ,[39,40,41] == 1, [40,41,42] == 1, [41,42,43] == 1\n",
     "            '''\n",
-    "            \n",
-    "            # print(clubbed_image_paths[38])\n",
-    "            # print(label[38])\n",
+    "            label, clubbed_image_paths = self.duplicate_n_balance_data(label, clubbed_image_paths)\n",
+    "            print(clubbed_image_paths)\n",
+    "            print(label)\n",
     "            y.append(label)\n",
-    "            print(len(y))\n",
     "            file_paths.append(clubbed_image_paths)\n",
+    "            \n",
     "        \n",
     "        #concatenate = merge multipe arrays into one\n",
     "        y = np.concatenate(y)\n",
@@ -364,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -463,9 +462,7 @@
       "16\n",
       "17\n",
       "18\n",
-      "19\n",
-      "(2025,)\n",
-      "(2025, 3)\n"
+      "19\n"
      ]
     }
    ],
@@ -477,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -889,21 +886,21 @@
       "['/mnt/storage/home/rag-tt/tactile_images/2/134.jpg'\n",
       " '/mnt/storage/home/rag-tt/tactile_images/2/135.jpg'\n",
       " '/mnt/storage/home/rag-tt/tactile_images/2/136.jpg']\n",
-      "['/mnt/storage/home/rag-tt/tactile_images/3/0.jpg'\n",
-      " '/mnt/storage/home/rag-tt/tactile_images/3/1.jpg'\n",
-      " '/mnt/storage/home/rag-tt/tactile_images/3/2.jpg']\n",
-      "['/mnt/storage/home/rag-tt/tactile_images/3/1.jpg'\n",
-      " '/mnt/storage/home/rag-tt/tactile_images/3/2.jpg'\n",
-      " '/mnt/storage/home/rag-tt/tactile_images/3/3.jpg']\n",
-      "['/mnt/storage/home/rag-tt/tactile_images/3/2.jpg'\n",
-      " '/mnt/storage/home/rag-tt/tactile_images/3/3.jpg'\n",
-      " '/mnt/storage/home/rag-tt/tactile_images/3/4.jpg']\n",
-      "['/mnt/storage/home/rag-tt/tactile_images/3/3.jpg'\n",
-      " '/mnt/storage/home/rag-tt/tactile_images/3/4.jpg'\n",
-      " '/mnt/storage/home/rag-tt/tactile_images/3/5.jpg']\n",
-      "['/mnt/storage/home/rag-tt/tactile_images/3/4.jpg'\n",
-      " '/mnt/storage/home/rag-tt/tactile_images/3/5.jpg'\n",
-      " '/mnt/storage/home/rag-tt/tactile_images/3/6.jpg']\n"
+      "['/mnt/storage/home/rag-tt/tactile_images/2/7.jpg'\n",
+      " '/mnt/storage/home/rag-tt/tactile_images/2/8.jpg'\n",
+      " '/mnt/storage/home/rag-tt/tactile_images/2/9.jpg']\n",
+      "['/mnt/storage/home/rag-tt/tactile_images/2/28.jpg'\n",
+      " '/mnt/storage/home/rag-tt/tactile_images/2/29.jpg'\n",
+      " '/mnt/storage/home/rag-tt/tactile_images/2/30.jpg']\n",
+      "['/mnt/storage/home/rag-tt/tactile_images/2/36.jpg'\n",
+      " '/mnt/storage/home/rag-tt/tactile_images/2/37.jpg'\n",
+      " '/mnt/storage/home/rag-tt/tactile_images/2/38.jpg']\n",
+      "['/mnt/storage/home/rag-tt/tactile_images/2/46.jpg'\n",
+      " '/mnt/storage/home/rag-tt/tactile_images/2/47.jpg'\n",
+      " '/mnt/storage/home/rag-tt/tactile_images/2/48.jpg']\n",
+      "['/mnt/storage/home/rag-tt/tactile_images/2/26.jpg'\n",
+      " '/mnt/storage/home/rag-tt/tactile_images/2/27.jpg'\n",
+      " '/mnt/storage/home/rag-tt/tactile_images/2/28.jpg']\n"
      ]
     }
    ],
@@ -914,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +926,7 @@
        "       1, 1, 1, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -950,8 +947,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[167], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmanage_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_data2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstride\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[162], line 224\u001b[0m, in \u001b[0;36mManage_data.load_data2\u001b[0;34m(self, no_of_samples, stride)\u001b[0m\n\u001b[1;32m    222\u001b[0m y \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate(y)\n\u001b[1;32m    223\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlabels \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(y)\n\u001b[0;32m--> 224\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mlabels\u001b[49m\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m    225\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_paths \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(sequential_image_paths)\n",
+      "Cell \u001b[0;32mIn[175], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmanage_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_data2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstride\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[170], line 224\u001b[0m, in \u001b[0;36mManage_data.load_data2\u001b[0;34m(self, no_of_samples, stride)\u001b[0m\n\u001b[1;32m    222\u001b[0m y \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate(y)\n\u001b[1;32m    223\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlabels \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(y)\n\u001b[0;32m--> 224\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mlabels\u001b[49m\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m    225\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_paths \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(sequential_image_paths)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'labels' is not defined"
      ]
     }
