remove_blank_images: imporved the code to properly remove lines from csv

--- a/code/remove_blank_images.ipynb
+++ b/code/remove_blank_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "'/home/rag-tt/tactile5/tactile_images/5/0.jpg'"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "97"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,38 +126,47 @@
     "        else:\n",
     "            print(f\"No file found at\",tactile_image_path, \"or\")\n",
     "            print(f\"No file found at\",depth_image_path)\n",
+    "            \n",
+    "            \n",
     "        csv_path = os.path.join(data_dir, str(obj_id),'slip_log.csv')\n",
-    "        \n",
-    "        \n",
     "        \n",
     "        # Read all rows from the CSV file\n",
     "        with open(csv_path, 'r', newline='') as csvfile:\n",
     "            reader = csv.reader(csvfile)\n",
-    "            rows = list(reader)\n",
+    "            csv_data = list(reader)\n",
+    "        csv_img_ids= [row[0] for row in csv_data]\n",
     "        \n",
-    "        for index, row in enumerate(rows):\n",
-    "            if row[0] == str(img_id):\n",
+    "        \n",
+    "        #find the line number in csv file to delete\n",
+    "        index = 0\n",
+    "        for csv_img_id in csv_img_ids:\n",
+    "            if csv_img_id == str(img_id):\n",
     "                line_number = index\n",
     "                break\n",
+    "            else:\n",
+    "                line_number = None\n",
+    "            index += 1\n",
+    "        print(line_number)    \n",
+    "        \n",
     "        \n",
     "        # Check if the line number is valid\n",
     "        if line_number is not None:\n",
     "            # Delete the specified line (0-indexed)\n",
-    "            del rows[line_number]\n",
+    "            del csv_data[line_number]\n",
     "            \n",
     "            # Write the updated rows back to the CSV file\n",
     "            with open(csv_path, 'w', newline='') as csvfile:\n",
     "                writer = csv.writer(csvfile)\n",
-    "                writer.writerows(rows)\n",
+    "                writer.writerows(csv_data)\n",
     "\n",
     "            print(f\"Deleted line with image_id {img_id} and saved the updated CSV.\")\n",
     "        else:\n",
-    "            print(f\"Image ID {img_id} not found.\")"
+    "            print(f\"Line with image id {img_id} not found.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,12 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def remove_blank_images(data_dir, no_of_samples = 60):\n",
+    "def remove_blank_images(data_dir, no_of_samples = 70):\n",
     "    image_paths = []\n",
     "    \n",
     "    for obj_id in range(no_of_samples):\n",
@@ -235,90 +243,27 @@
     "                blank_image_spotted = 1\n",
     "            else:\n",
     "                if blank_image_spotted == 1:\n",
-    "                    delete_blank_images(obj_id, blank_image_ids)\n",
+    "                    delete_images_and_labels(obj_id, blank_image_ids)\n",
     "                    blank_image_ids=[]\n",
     "                    blank_image_spotted =0\n",
     "                previous_highest_pixel_value = current_highest_pixel_value\n",
-    "                \n",
+    "        if len(blank_image_ids) > 3:\n",
+    "            blank_image_ids = blank_image_ids[3:]\n",
+    "            print(blank_image_ids)\n",
+    "            delete_images_and_labels(obj_id, blank_image_ids)\n",
     "        #rename the images to fill the gaps        \n",
     "        path = os.path.join(data_dir, str(obj_id))\n",
     "        fill_image_sequence(path)\n",
-    "                \n",
-    "  \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 221,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image at /home/rag-tt/tactile5/tactile_images/55/30.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/55/depth30.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/55/slip_log.csv\n",
-      "Deleted line 31 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/55/72.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/55/depth72.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/55/slip_log.csv\n",
-      "Deleted line 73 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/56/20.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/56/depth20.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/56/slip_log.csv\n",
-      "Deleted line 21 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/56/75.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/56/depth75.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/56/slip_log.csv\n",
-      "Deleted line 76 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/56/76.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/56/depth76.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/56/slip_log.csv\n",
-      "Deleted line 77 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/64.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/depth64.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/57/slip_log.csv\n",
-      "Deleted line 65 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/65.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/depth65.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/57/slip_log.csv\n",
-      "Deleted line 66 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/66.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/depth66.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/57/slip_log.csv\n",
-      "Deleted line 67 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/67.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/depth67.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/57/slip_log.csv\n",
-      "Deleted line 68 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/68.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/depth68.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/57/slip_log.csv\n",
-      "Deleted line 69 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/69.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/depth69.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/57/slip_log.csv\n",
-      "Deleted line 70 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/70.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/57/depth70.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/57/slip_log.csv\n",
-      "Deleted line 71 and saved the updated CSV.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/59/51.jpg has been deleted.\n",
-      "Image at /home/rag-tt/tactile5/tactile_images/59/depth51.png has been deleted.\n",
-      "/home/rag-tt/tactile5/tactile_images/59/slip_log.csv\n",
-      "Deleted line 52 and saved the updated CSV.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "remove_blank_images(data_dir)"
+    "remove_blank_images(data_dir, no_of_samples=72)"
    ]
   }
  ],
