remove_blank_images: delete folders with small data

--- a/code/remove_blank_images.ipynb
+++ b/code/remove_blank_images.ipynb
@@ -250,7 +250,9 @@
     "    \n",
     "    for obj_id in range(no_of_samples):\n",
     "        no_of_images = find_no_of_images(obj_id)\n",
-    "        if no_of_images < 40:\n",
+    "        if no_of_images < 30:\n",
+    "            object_folder_path = os.path.join(data_dir, str(obj_id))\n",
+    "            delete_directory(object_folder_path)\n",
     "            continue\n",
     "        if no_of_images > 300:\n",
     "            object_folder_path = os.path.join(data_dir, str(obj_id))\n",
