--- a/code/create_train_test_data.ipynb
+++ b/code/create_train_test_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -223,15 +223,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory '/home/rag-tt/tactile7/train_data' created successfully.\n",
-      "Directory '/home/rag-tt/tactile7/test_data' created successfully.\n"
+      "Directory '/home/rag-tt/tactile8/train_data' created successfully.\n",
+      "Directory '/home/rag-tt/tactile8/test_data' created successfully.\n"
      ]
     }
    ],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -304,21 +304,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The directory '/home/rag-tt/train_data' contains 1829 subdirectories.\n",
-      "train_data_qty= 1829\n",
-      "The directory '/home/rag-tt/test_data' contains 186 subdirectories.\n",
-      "test_data_qty= 186\n",
-      "The directory '/home/rag-tt/tactile7/train_data' contains 1892 subdirectories.\n",
-      "temp_train_data_qty= 1892\n",
-      "The directory '/home/rag-tt/tactile7/test_data' contains 157 subdirectories.\n",
-      "temp_test_data_qty= 157\n"
+      "The directory '/home/rag-tt/train_data' contains 3720 subdirectories.\n",
+      "train_data_qty= 3720\n",
+      "The directory '/home/rag-tt/test_data' contains 342 subdirectories.\n",
+      "test_data_qty= 342\n",
+      "The directory '/home/rag-tt/tactile8/train_data' contains 1865 subdirectories.\n",
+      "temp_train_data_qty= 1865\n",
+      "The directory '/home/rag-tt/tactile8/test_data' contains 187 subdirectories.\n",
+      "temp_test_data_qty= 187\n"
      ]
     }
    ],
@@ -336,19 +336,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "[Errno 39] Directory not empty: '/home/rag-tt/tactile7/train_data/0' -> '/home/rag-tt/tactile7/train_data/1829'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[257], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mrename_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnew_start\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtrain_data_qty\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mroot_directory\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtemp_train_data_dir\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mno_of_files\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtemp_train_data_qty\u001b[49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m rename_data(new_start\u001b[38;5;241m=\u001b[39m test_data_qty , root_directory \u001b[38;5;241m=\u001b[39m temp_test_data_dir , no_of_files \u001b[38;5;241m=\u001b[39m temp_test_data_qty)\n",
-      "Cell \u001b[0;32mIn[249], line 9\u001b[0m, in \u001b[0;36mrename_data\u001b[0;34m(new_start, root_directory, no_of_files)\u001b[0m\n\u001b[1;32m      6\u001b[0m new_folder \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(root_directory, \u001b[38;5;28mstr\u001b[39m(i \u001b[38;5;241m+\u001b[39m new_start \u001b[38;5;241m-\u001b[39m current_start))\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m----> 9\u001b[0m     \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrename\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurrent_folder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_folder\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;66;03m# print(f\"Renamed '{current_folder}' to '{new_folder}'\")\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m:\n",
-      "\u001b[0;31mOSError\u001b[0m: [Errno 39] Directory not empty: '/home/rag-tt/tactile7/train_data/0' -> '/home/rag-tt/tactile7/train_data/1829'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Directory '/home/rag-tt/tactile8/train_data/1865' not found.\n",
+      "Renaming complete.\n",
+      "Error: Directory '/home/rag-tt/tactile8/test_data/187' not found.\n",
+      "Renaming complete.\n"
      ]
     }
    ],
@@ -359,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
