--- a/code/pre_processing_data/create_train_test_data.ipynb
+++ b/code/pre_processing_data/create_train_test_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -242,9 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Destination path '/home/rag-tt/tactile11/train_data/0/0' already exists\n"
+     ]
+    }
+   ],
    "source": [
     "for obj_id in train_data_list:\n",
     "    obj_dir = os.path.join(tactile_images_dir, str(obj_id))\n",
@@ -271,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -304,21 +312,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The directory '/home/rag-tt/train_data' contains 7621 subdirectories.\n",
-      "train_data_qty= 7621\n",
-      "The directory '/home/rag-tt/test_data' contains 738 subdirectories.\n",
-      "test_data_qty= 738\n",
-      "The directory '/home/rag-tt/tactile11/train_data' contains 2035 subdirectories.\n",
-      "temp_train_data_qty= 2035\n",
-      "The directory '/home/rag-tt/tactile11/test_data' contains 228 subdirectories.\n",
-      "temp_test_data_qty= 228\n"
+      "The directory '/home/rag-tt/train_data' contains 7182 subdirectories.\n",
+      "train_data_qty= 7182\n",
+      "The directory '/home/rag-tt/test_data' contains 685 subdirectories.\n",
+      "test_data_qty= 685\n",
+      "The directory '/home/rag-tt/tactile11/train_data' contains 1747 subdirectories.\n",
+      "temp_train_data_qty= 1747\n",
+      "The directory '/home/rag-tt/tactile11/test_data' contains 112 subdirectories.\n",
+      "temp_test_data_qty= 112\n"
      ]
     }
    ],
@@ -336,16 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: Directory '/home/rag-tt/tactile11/train_data/2035' not found.\n",
+      "Error: Directory '/home/rag-tt/tactile11/train_data/1747' not found.\n",
       "Renaming complete.\n",
-      "Error: Directory '/home/rag-tt/tactile11/test_data/228' not found.\n",
+      "Error: Directory '/home/rag-tt/tactile11/test_data/112' not found.\n",
       "Renaming complete.\n"
      ]
     }
@@ -357,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
