add back_end_server adresses

--- a/code/machine_learning/ml_feature_generation.ipynb
+++ b/code/machine_learning/ml_feature_generation.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "class Manage_data():\n",
     "    def __init__(self):\n",
-    "        data_dir='/home/rag-tt/'\n",
+    "        data_dir='/home/rag-tt/workspace/'\n",
     "        self.train_data_dir = os.path.join(data_dir,'train_data')\n",
     "        self.test_data_dir = os.path.join(data_dir,'test_data')\n",
     "        self.hog_features_dir = os.path.join(data_dir,'hog_features')\n",
