--- a/code/pre_processing_data/create_train_test_data.ipynb
+++ b/code/pre_processing_data/create_train_test_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '/home/rag-tt/'\n",
+    "data_dir = '/home/rag-tt/workspace'\n",
     "train_data_dir = os.path.join(data_dir,'train_data')\n",
     "test_data_dir = os.path.join(data_dir,'test_data')\n",
-    "source_data_dir = os.path.join(data_dir,'tactile11')\n",
+    "source_data_dir = os.path.join(data_dir,'tactile14')\n",
     "tactile_images_dir =  os.path.join(source_data_dir,'tactile_images')\n",
     "temp_train_data_dir = os.path.join(source_data_dir,'train_data')\n",
     "temp_test_data_dir = os.path.join(source_data_dir,'test_data')"
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -223,15 +223,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory '/home/rag-tt/tactile11/train_data' already exists.\n",
-      "Directory '/home/rag-tt/tactile11/test_data' already exists.\n"
+      "Directory '/home/rag-tt/workspace/tactile14/train_data' created successfully.\n",
+      "Directory '/home/rag-tt/workspace/tactile14/test_data' created successfully.\n"
      ]
     }
    ],
@@ -242,17 +242,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Destination path '/home/rag-tt/tactile11/train_data/0/0' already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for obj_id in train_data_list:\n",
     "    obj_dir = os.path.join(tactile_images_dir, str(obj_id))\n",
@@ -279,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -312,21 +304,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The directory '/home/rag-tt/train_data' contains 7182 subdirectories.\n",
-      "train_data_qty= 7182\n",
-      "The directory '/home/rag-tt/test_data' contains 685 subdirectories.\n",
-      "test_data_qty= 685\n",
-      "The directory '/home/rag-tt/tactile11/train_data' contains 1747 subdirectories.\n",
-      "temp_train_data_qty= 1747\n",
-      "The directory '/home/rag-tt/tactile11/test_data' contains 112 subdirectories.\n",
-      "temp_test_data_qty= 112\n"
+      "The directory '/home/rag-tt/workspace/train_data' contains 9133 subdirectories.\n",
+      "train_data_qty= 9133\n",
+      "The directory '/home/rag-tt/workspace/test_data' contains 863 subdirectories.\n",
+      "test_data_qty= 863\n",
+      "The directory '/home/rag-tt/workspace/tactile14/train_data' contains 1709 subdirectories.\n",
+      "temp_train_data_qty= 1709\n",
+      "The directory '/home/rag-tt/workspace/tactile14/test_data' contains 179 subdirectories.\n",
+      "temp_test_data_qty= 179\n"
      ]
     }
    ],
@@ -344,16 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: Directory '/home/rag-tt/tactile11/train_data/1747' not found.\n",
+      "Error: Directory '/home/rag-tt/workspace/tactile14/train_data/1709' not found.\n",
       "Renaming complete.\n",
-      "Error: Directory '/home/rag-tt/tactile11/test_data/112' not found.\n",
+      "Error: Directory '/home/rag-tt/workspace/tactile14/test_data/179' not found.\n",
       "Renaming complete.\n"
      ]
     }
@@ -365,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
