--- a/code/machine_learning/ml.ipynb
+++ b/code/machine_learning/ml.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-08 19:39:04.140586: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-07-08 19:39:04.163024: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-07-08 19:39:04.482775: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,15 +849,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The directory '/home/rag-tt/train_data' contains 5584 subdirectories.\n",
-      "The directory '/home/rag-tt/test_data' contains 528 subdirectories.\n"
+      "The directory '/home/rag-tt/train_data' does not exist.\n",
+      "The directory '/home/rag-tt/test_data' does not exist.\n"
      ]
     }
    ],
@@ -870,36 +881,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(73, 1944) (73, 1944)\n",
-      "(71, 1944) (71, 1944)\n",
-      "(72, 1944) (72, 1944)\n",
-      "(47, 1944) (47, 1944)\n",
-      "(53, 1944) (53, 1944)\n",
-      "(68, 1944) (68, 1944)\n",
-      "(51, 1944) (51, 1944)\n",
-      "(72, 1944) (72, 1944)\n",
-      "(65, 1944) (65, 1944)\n",
-      "(62, 1944) (62, 1944)\n",
-      "(69, 1944) (69, 1944)\n",
-      "(64, 1944) (64, 1944)\n",
-      "(71, 1944) (71, 1944)\n",
-      "(46, 1944) (46, 1944)\n",
-      "(70, 1944) (70, 1944)\n",
-      "(32, 1944) (32, 1944)\n",
-      "(70, 1944) (70, 1944)\n",
-      "(70, 1944) (70, 1944)\n",
-      "(68, 1944) (68, 1944)\n",
-      "(71, 1944) (71, 1944)\n",
-      "(54, 1944) (54, 1944)\n",
-      "(58, 1944) (58, 1944)\n",
-      "(43, 1944) (43, 1944)\n"
+     "ename": "ValueError",
+     "evalue": "need at least one array to concatenate",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m train_labels, train_features \u001b[38;5;241m=\u001b[39m  \u001b[43mmanage_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_data_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m test_labels, test_features \u001b[38;5;241m=\u001b[39m  manage_data\u001b[38;5;241m.\u001b[39mload_data(test_data_dir, \u001b[38;5;241m5\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[2], line 249\u001b[0m, in \u001b[0;36mManage_data.load_data\u001b[0;34m(self, data_dir, no_of_samples)\u001b[0m\n\u001b[1;32m    246\u001b[0m     features\u001b[38;5;241m.\u001b[39mappend(features_1)\n\u001b[1;32m    248\u001b[0m \u001b[38;5;66;03m#concatenate = merge multipe arrays into one\u001b[39;00m\n\u001b[0;32m--> 249\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    250\u001b[0m labels \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(y)\n\u001b[1;32m    252\u001b[0m \u001b[38;5;66;03m# print(self.labels.shape) = 2025\u001b[39;00m\n",
+      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: need at least one array to concatenate"
      ]
     }
    ],
@@ -910,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4635,7 +4630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4693,7 +4688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
